--- a/app/views/modals/pomodoro-start.html
+++ b/app/views/modals/pomodoro-start.html
@@ -1,5 +1,5 @@
 <div class="modal-header">
-	<h3 class="modal-title"><span class="pomo-small"></span> Add a pomodoro to "{{pomotask.name}}"</h3>
+	<h3 class="modal-title"><span class="pomo-small"></span> Start a pomodoro for "{{pomotask.name}}"</h3>
 </div>
 <div class="modal-body">
 	<div class="container-fluid">
