--- a/app/views/app/pomotasks-todo.html
+++ b/app/views/app/pomotasks-todo.html
@@ -26,7 +26,7 @@
 			</td>
 			<td>
 				<div class="btn-group pull-right list-button">
-					<button type="button" class="btn btn-primary">Details</button>
+					<button type="button" class="btn btn-primary" ng-click="detailPomotaskModal(pomotask)">Details</button>
 					<button type="button" class="btn btn-primary dropdown-toggle" data-toggle="dropdown">
 					<span class="caret"></span>
 					<span class="sr-only">Toggle Dropdown</span>
@@ -35,7 +35,7 @@
 						<li><a ng-click="startPomodoroModal(pomotask)">Start a Pomodoro</a></li>
 						<li><a ng-click="addPomodoroModal(pomotask)">Add a Pomodoro</a></li>
 						<li class="divider"></li>
-						<li><a ng-click="">Modify</a></li>
+						<li><a ng-click="modifyPomotaskModal(pomotask)">Modify</a></li>
 						<li><a ng-click="deletePomotaskModal(pomotask)">Delete</a></li>
 					</ul>
 				</div>
