--- a/app/views/navbar.html
+++ b/app/views/navbar.html
@@ -1,6 +1,6 @@
 <div class="navbar navbar-default navbar-fixed-top container-fluid" role="navigation" bs-navbar>
 	<div class="navbar-header">
-		<a class="navbar-brand" href="#">Pomasana App</a>
+		<a class="logo" href="#"><img src="../images/logo-full.png"></a>
 	</div>
 	<ul class="nav navbar-nav navbar-right">
 		<li ng-show="!currentUser" ><a href="http://localhost:8080/api/registration?redirect_url=http%3A%2F%2F127.0.0.1%3A9000%2F%23%2Fpersonal-page">Login</a></li>
