--- a/app/views/app/pomotasks-done.html
+++ b/app/views/app/pomotasks-done.html
@@ -1,6 +1,6 @@
 <h1 class="header">Pomotasks Done</h1>
 <form class="row">
-	<div class="input-group col-xs-4 pull-left" ng-show="pomotasks.length > 1">
+	<div class="input-group col-xs-4 pull-left" ng-show="pomotasks.length">
 		<span class="input-group-addon"><span class="glyphicon glyphicon-search"></span></span>
 		<input class="form-control" placeholder="Filter" ng-model="query">
 	</div>
