--- a/app/views/main.html
+++ b/app/views/main.html
@@ -4,7 +4,7 @@
     <img src="images/yeoman.png" alt="I'm Yeoman"><br>
     Always a pleasure scaffolding your apps.
   </p>
-  <p><a href="http://localhost:8080/api/registration?redirect_url=http%3A%2F%2F127.0.0.1%3A9000%2F%23%2Fpersonal-page" class="btn btn-lg btn-success">Login with Asana <span class="glyphicon glyphicon-ok"></span></a></p>
+  <p><a ng-href="{{loginUrl}}" class="btn btn-lg btn-success">Login with Asana <span class="glyphicon glyphicon-ok"></span></a></p>
 </div>
 
 <div class="row marketing">
