--- a/app/views/app/pomotasks-done.html
+++ b/app/views/app/pomotasks-done.html
@@ -13,7 +13,7 @@
 		<th></th>
 		<th>Name</th>
 		<th>Completed at</th>
-		<th>Progress</th>
+		<th>Pomodori</th>
 		<th></th>
 		<tr ng-repeat="pomotask in pomotasks | filter: query" >
 			<td class="col-sm-1">
