--- a/app/views/app/pomotasks-todo.html
+++ b/app/views/app/pomotasks-todo.html
@@ -21,7 +21,7 @@
 			</td>
 			<td><h4>{{pomotask.name}}</h4>	</td>
 			<td>
-				<div ng-init="x = usedPom(pomotask)"><rating readonly="true" ng-model="x" max="estPom(pomotask)" state-on="'pomo'" state-off="'pomo-shape'"></rating></div>
+				<div ng-init="x = usedPom(pomotask)"><rating readonly="true" ng-model="x" max="maxProgress(pomotask)" state-on="'pomo'" state-off="'pomo-shape'"></rating></div>
 
 			</td>
 			<td>
