--- a/app/views/left-navbar.html
+++ b/app/views/left-navbar.html
@@ -1,6 +1,6 @@
 <div class="col-sm-3 col-md-2 sidebar">
 	<ul class="nav nav-sidebar">
-		<li ng-class="{active : tabIsActive('/inventory')}"><a href="#">Activity Inventory</a></li>
+		<li ng-class="{active : tabIsActive('/inventory')}"><a href="#/inventory">Activity Inventory</a></li>
 		<li ng-class="{active : tabIsActive('/pomotasks-todo')}"><a href="#/pomotasks-todo">Pomotask Todo</a></li>
 		<li ng-class="{active : tabIsActive('/pomotasks-done')}"><a href="#/pomotasks-done">Pomotask Done</a></li>
 		<li ng-class="{active : tabIsActive('/statistics')}"><a href="#">Statistics</a></li>
