--- a/app/views/navbar.html
+++ b/app/views/navbar.html
@@ -3,7 +3,7 @@
 		<a class="logo" href="#"><img src="../images/logo-full.png"></a>
 	</div>
 	<ul class="nav navbar-nav navbar-right">
-		<li ng-show="!currentUser" ><a href="http://localhost:8080/api/registration?redirect_url=http%3A%2F%2F127.0.0.1%3A9000%2F%23%2Fpersonal-page">Login</a></li>
+		<li ng-show="!currentUser" ><a ng-href="{{loginUrl}}">Login</a></li>
 		<li ng-class="{active : tabIsActive('/personal-page')}" ng-show="currentUser" class="dropdown">
                     <a class="dropdown-toggle" data-toggle="dropdown" >
                         <span class="glyphicon glyphicon-user"></span></i> {{currentUser.name}} <i class="fa fa-caret-down"></i>
