--- a/app/views/navbar.html
+++ b/app/views/navbar.html
@@ -1,6 +1,6 @@
 <div class="navbar navbar-default navbar-fixed-top container-fluid" role="navigation" bs-navbar>
 	<div class="navbar-header">
-		<a class="logo" href="#"><img src="../images/logo-full.png"></a>
+		<a class="logo" href="#"><img class="main-logo"></a>
 	</div>
 	<ul class="nav navbar-nav navbar-right">
 		<li ng-show="!currentUser" ><a ng-href="{{loginUrl}}">Login</a></li>
