--- a/app/views/modals/pomodoro-start.html
+++ b/app/views/modals/pomodoro-start.html
@@ -6,9 +6,9 @@
 		        <div><progressbar value="progress" type="success" max="1499"></progressbar></div>
 
 		<div id="timer" class="container-fluid">
-			<span id="minutes">{{minsText}}</span>
+			<span id="minutes">{{currentTime.minsText}}</span>
 			<span id="middle">:</span>
-			<span id="seconds">{{secsText}}</span>
+			<span id="seconds">{{currentTime.secsText}}</span>
 		</div>
 		<div class="row"><div class="col-md-6">
 			<label>Internal interruptions</label>
