--- a/app/views/app/pomotasks-todo.html
+++ b/app/views/app/pomotasks-todo.html
@@ -1,44 +1,47 @@
-<h1 class="header">Pomotasks Todo</h1>
 <form class="row">
-	<div class="input-group col-xs-4 pull-left" ng-show="pomotasks.length > 1">
-		<span class="input-group-addon"><span class="glyphicon glyphicon-search"></span></span>
-		<input class="form-control" placeholder="Filter" ng-model="query">
+	<div class="col-xs-4 form form-inline">
+		<h5>Today todo list</h5>
 	</div>
-	<div class="col-xs-4" ng-show="pomotasks.length > 0"></div>
-	<div class="col-xs-4" ng-show="pomotasks.length === 0"></div>
-	<div class="col-xs-4"><button class="pull-right btn-refresh btn btn-primary" ng-click="loadPomotasks()"><span class="glyphicon glyphicon-refresh"></span> Refresh</button></div>
+	<div class="input-group col-xs-4 pull-right">
+		<span class="input-group-addon"><span class="glyphicon glyphicon-search"></span></span>
+		<input ng-disabled="pomotasks.length === 0" class="form-control" placeholder="Filter" ng-model="query">
+	</div>
+	<div class="col-xs-6 col-md-4"><button class="pull-right btn-refresh btn btn-default" ng-click="loadPomotasks()"><span class="glyphicon glyphicon-refresh"></span> Refresh</button></div>
 </form>
-<table ng-show="pomotasks.length > 0" class="table table-striped table-hover">
-	<tr>
-		<th></th>
-		<th>Name</th>
-		<th>Progress</th>
-		<th></th>
-		<tr ng-repeat="pomotask in pomotasks | filter: query" >
-			<td class="col-md-1">
-				<button class="btn btn-success btn-complete" ng-click="completePomotask(pomotask)"><span class="glyphicon glyphicon-unchecked"></span>  Complete</button>
-			</td>
-			<td><h4>{{pomotask.name}}</h4>	</td>
-			<td>
-				<div ng-init="x = usedPom(pomotask)"><rating readonly="true" ng-model="x" max="maxProgress(pomotask)" state-on="'pomo'" state-off="'pomo-shape'"></rating></div>
-
-			</td>
-			<td>
-				<div class="btn-group pull-right list-button">
-					<button type="button" class="btn btn-primary" ng-click="detailPomotaskModal(pomotask)">Details</button>
-					<button type="button" class="btn btn-primary dropdown-toggle" data-toggle="dropdown">
-					<span class="caret"></span>
-					<span class="sr-only">Toggle Dropdown</span>
-					</button>
-					<ul class="dropdown-menu" role="menu">
-						<li><a ng-click="startPomodoroModal(pomotask)">Start a Pomodoro</a></li>
-						<li><a ng-click="addPomodoroModal(pomotask)">Add a Pomodoro</a></li>
-						<li class="divider"></li>
-						<li><a ng-click="modifyPomotaskModal(pomotask)">Modify</a></li>
-						<li><a ng-click="deletePomotaskModal(pomotask)">Delete</a></li>
-					</ul>
-				</div>
-			</td>
-		</tr>
-	</table>
-	<div ng-show="pomotasks.length === 0" class="container"><h1 >You have no Pomotask!</h1> <h3>Go to the <a href="#/inventory">Activity Inventory</a> to add one!</div>
+<hr class="myHr">
+<div class="container-fluid view-content">
+	<table ng-show="pomotasks.length > 0 && !loading" class="table table-hover">
+		<tr>
+			<th></th>
+			<th>Name</th>
+			<th>Progress</th>
+			<th></th>
+			<tr ng-repeat="pomotask in pomotasks | filter: query" >
+				<td class="col-md-1">
+					<button class="btn btn-success btn-complete" ng-click="completePomotask(pomotask)"><span class="glyphicon glyphicon-unchecked"></span>  Complete</button>
+				</td>
+				<td><h4>{{pomotask.name}}</h4>	</td>
+				<td>
+					<div ng-init="x = usedPom(pomotask)"><rating readonly="true" ng-model="x" max="maxProgress(pomotask)" state-on="'pomo'" state-off="'pomo-shape'"></rating></div>
+				</td>
+				<td>
+					<div class="btn-group pull-right list-button">
+						<button type="button" class="btn btn-primary" ng-click="detailPomotaskModal(pomotask)">Details</button>
+						<button type="button" class="btn btn-primary dropdown-toggle" data-toggle="dropdown">
+						<span class="caret"></span>
+						<span class="sr-only">Toggle Dropdown</span>
+						</button>
+						<ul class="dropdown-menu" role="menu">
+							<li><a ng-click="startPomodoroModal(pomotask)">Start a Pomodoro</a></li>
+							<li><a ng-click="addPomodoroModal(pomotask)">Add a Pomodoro</a></li>
+							<li class="divider"></li>
+							<li><a ng-click="modifyPomotaskModal(pomotask)">Modify</a></li>
+							<li><a ng-click="deletePomotaskModal(pomotask)">Delete</a></li>
+						</ul>
+					</div>
+				</td>
+			</tr>
+		</table>
+		<div class="spinner"><span us-spinner="{radius:30, width:8, length: 16, hwaccel: true, color: '#53B768',length: 0,width: 12}" ng-show="loading"></span></div>
+		<div ng-show="pomotasks.length === 0 && !loading" class="container-fluid"><h3 >You have no Pomotask!</h3> <h4>Go to the <a href="#/inventory">Activity Inventory</a>, choose from your Asan projects, create some Pomotask and start working!</h4></div>
+	</div>
