--- a/app/views/modals/pomotask-create.html
+++ b/app/views/modals/pomotask-create.html
@@ -6,6 +6,8 @@
 	<div><rating ng-model="data.estimatedPomodori" max="8" state-on="'pomo'" state-off="'pomo-small-est'"></rating></div>
 </div>
 <div class="modal-footer">
+	<button class="btn btn-primary" ng-click="share()" ng-show="added">Share on FB</button>
+
 	<a class="btn btn-success" progress-button loading-text="Creating.." finished-text="Created!" ng-click="ok(this)">Create</a>
 	<button class="btn btn-warning" ng-click="cancel()">Cancel</button>
 </div>
