--- a/app/views/modals/pomodoro-add.html
+++ b/app/views/modals/pomodoro-add.html
@@ -27,6 +27,7 @@
 <div class="modal-footer">
 	<button class="btn btn-primary" ng-click="share()" ng-show="added">Share on FB</button>
 
-	<a class="btn btn-success" progress-button loading-text="Adding.." finished-text="Added!" ng-click="ok(this)">Add</a>
-	<button class="btn btn-warning" ng-click="cancel()">Cancel</button>
+	<a ng-show="!added" class="btn btn-success" progress-button loading-text="Adding.." finished-text="Added!" ng-click="ok(this)">Add</a>
+	<button ng-show="!added" class="btn btn-warning" ng-click="cancel()">Cancel</button>
+	<button ng-show="added" class="btn btn-success" ng-click="close()">OK</button>
 </div>
