--- a/app/views/modals/pomodoro-start.html
+++ b/app/views/modals/pomodoro-start.html
@@ -3,7 +3,7 @@
 </div>
 <div class="modal-body">
 	<div class="container-fluid">
-		        <div><progressbar value="progress" type="success" max="1499"></progressbar></div>
+		        <div><progressbar value="currentTime.progress" type="success" max="1499"></progressbar></div>
 
 		<div id="timer" class="container-fluid">
 			<span id="minutes">{{currentTime.minsText}}</span>
